When possible, terminate web processes immediately when closing their last page. <http://webkit.org/b/115964> <rdar://problem/13869266>

Reviewed by Geoffrey Garen.

When we're using a network process, there's no need for the UI process to wait for web processes
to clear resource caches and terminate nicely.

We can just kill them off right away in WebProcessProxy::removeWebPage() when the last page is closed.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::removeWebPage):

    Terminate the child process immediately if possible.

* UIProcess/WebProcessProxy.h:
(WebKit::WebProcessProxy::canTerminateChildProcess):
(WebKit::WebProcessProxy::shouldTerminate):

    Broke out the logic from the shouldTerminate() IPC message handler into a separate function
    so we can call it from removeWebPage().

Canonical link: https://commits.webkit.org/134384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149934 268f45cc-cd09-0410-ab3c-d52691b4dbfc