Source/WebKit2/UIProcess/WebProcessProxy.cpp
@@ -198,6 +198,13 @@ void WebProcessProxy::removeWebPage(uint64_t pageID)
     m_processSuppressiblePages.remove(pageID);
     updateProcessSuppressionState();
 #endif
+
+#if ENABLE(NETWORK_PROCESS)
+    // Terminate the web process immediately if we have enough information to confidently do so.
+    // This only works if we're using a network process. Otherwise we have to wait for the web process to clean up.
+    if (canTerminateChildProcess() && m_context->usesNetworkProcess())
+        requestTermination();
+#endif
 }
 
 Vector<WebPageProxy*> WebProcessProxy::pages() const
@@ -505,17 +512,27 @@ size_t WebProcessProxy::frameCountInPage(WebPageProxy* page) const
     return result;
 }
 
+bool WebProcessProxy::canTerminateChildProcess()
+{
+    if (!m_pageMap.isEmpty())
+        return false;
+
+    if (m_downloadProxyMap && !m_downloadProxyMap->isEmpty())
+        return false;
+
+    if (!m_context->shouldTerminate(this))
+        return false;
+
+    return true;
+}
+
 void WebProcessProxy::shouldTerminate(bool& shouldTerminate)
 {
-    if (!m_pageMap.isEmpty() || (m_downloadProxyMap && !m_downloadProxyMap->isEmpty()) || !m_context->shouldTerminate(this)) {
-        shouldTerminate = false;
-        return;
+    shouldTerminate = canTerminateChildProcess();
+    if (shouldTerminate) {
+        // We know that the web process is going to terminate so disconnect it from the context.
+        disconnect();
     }
-
-    shouldTerminate = true;
-
-    // We know that the web process is going to terminate so disconnect it from the context.
-    disconnect();
 }
 
 void WebProcessProxy::updateTextCheckerState()
